[package]
name = "crossword"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
getrandom = { version = "0.2", features = ["js"] }
postgrest = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.0"
dotenv = "0.15.0"
chrono = "0.4.33"
plotly = "0.8.4"
linreg = "0.2.0"
reqwest = "0.11.24"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
